# learning-f95

./: arrays.f95  arrays.f95.out  derived_types.f95  do_concurrent.f95  do_concurrent.f95.out  dynamicarrays.f95  float.f95  func_and_subs.f95  func_and_subs.f95.out  helloworld  modules.f95  modules.f95.out  nested_loop_tags.f95  nested_loop_tags.f95.out  read_value.f95  read_value.f95.out  string_array.f95  string_array.f95.out  testmodule.mod  variables.f95  variables.f95.out
Mandelbrot/: constants.f90  constants.mod  count_time.fish  ma-style.mplstyle  mandelbrot.f95  mandelbrot.py  mesh.f90  mesh.mod  meson.build  utils.mod  view_fractal.py
